# mono-helloworld

./: Makefile.am  Makefile.in  README  configure  configure.ac  mono-helloworld.csproj  mono-helloworld_vs2010.sln  mono-helloworldform.csproj  script.in
Properties/: AssemblyInfo.cs
autom4te.cache/: output.1  traces.1
man/: Makefile.am  Makefile.in
src/: AssemblyInfo.cs.in  Makefile.am  autogen.sh  configure.in  helloworld.cs  helloworldform.cs  helloworldgtk.cs
src/autom4te.cache/: requests  traces.0
src/man/: Makefile.am
src/resources/: Makefile.in
